@@ -289,4 +289,7 @@ constexpr std::string_view WaveAssistant = "WaveAssistant";
 constexpr std::string_view MasterAudioVolume = "MasterAudioVolume";
 
 constexpr std::string_view RaspFile = "RaspFile";
+
+constexpr std::string_view StratuxHorizontalRange = "StratuxHorizontalRange";
+constexpr std::string_view StratuxVerticalRange = "StratuxVerticalRange";
 }
